--- a/client/components/listings.html
+++ b/client/components/listings.html
@@ -2,9 +2,11 @@
   <div class="listings">
     <div class="listings_channels">
       <h2 class="listings_header">Channels</h2>
-      <!-- <ul class="channel_list">
-        {{> channel}}
-      </ul> -->
+      <ul class="channel_list">
+        {{#each channels}}
+          {{> channel name=name}}
+        {{/each}}
+      </ul>
       
     </div>
     <div class="listings_direct-messages"></div>
